[package]
name = "display"
version = "0.1.0"
authors = ["Massimiliano Mantione <massimiliano.mantione@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protocol = {path="../protocol"}
map = {path="../map"}
nalgebra = "0.18.1"
vek = "0.9.9"

[dependencies.kiss3d]
version = "0.21.0"
features = ["conrod"]
