[package]
name = "simulation"
version = "0.1.0"
authors = ["Massimiliano Mantione <massimiliano.mantione@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hal = {path = "../hal"}
map = {path = "../map"}
protocol = {path = "../protocol"}
nphysics3d = "0.12.3"
ncollide3d = "0.20.1"
nalgebra = "0.18.1"
vek = "0.9.9"
nphysics_testbed3d = "0.6.0"
